--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "chart.js": "^4.4.7",
     "dayjs": "^1.11.13",
     "jodit-react": "^4.1.2",
-    "next": "15.1.0",
+    "next": "^15.1.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.0.0",
